src/styles/globals.css
@import "tailwindcss/base";

@import "tailwindcss/components";

@import "tailwindcss/utilities";
html,
body {
  padding: 0;
  margin: 0;

  font-family: "Fira Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
}
body ::-webkit-scrollbar {
  display: none;
}
html::-webkit-scrollbar {
  width: 0px; /* For Chrome, Safari, and Opera */
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}
h3 {
  font-family: "Cinzel", serif;
}

#intro {
  background: url(https://images.pexels.com/photos/3780104/pexels-photo-3780104.png?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

#skills {
  background: url(https://images.pexels.com/photos/1070345/pexels-photo-1070345.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

#contact {
  background: url(https://images.pexels.com/photos/1040473/pexels-photo-1040473.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
}

.skillProgressBar {
  font-family: "Poppins", sans-serif;
}

#email-contact:focus {
  outline: 1rem #000000;
}

#email-contact::selection {
  color: none;
  background: none;
}
#email-copy:focus {
  background-color: rgb(0, 153, 255);
}
#email-copy:focus > svg {
  padding: 1px;
}

@media screen and (max-width: 767px) {
  html,
  body {
    scrollbar-width: none; /* For Firefox */
    -ms-overflow-style: none; /* For Internet Explorer and Edge */
    scroll-snap-type: y mandatory;
  }
}

